feat(install): `fzf` added to install script

--- a/bin/install
+++ b/bin/install
@@ -7,12 +7,19 @@ if [[ "$(uname -s)" -eq "Darwin" ]]; then
     /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
     echo "Brew is now installed."
   fi
+
   # ZSH
   brew install zsh
+  
   # Oh-my-zsh
   sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+  
   # ZSH Autosuggestions Plugin
   brew install zsh-autosuggestions
+  
   # ZSH Syntax Highlighting
   brew install zsh-syntax-highlighting
+
+  # FZF
+  brew install fzf
 fi
