--- a/bin/install
+++ b/bin/install
@@ -29,4 +29,8 @@ if [[ "$(uname -s)" -eq "Darwin" ]]; then
 
   # FastFetch / Neofetch
   brew install fastfetch
+
+  # Install Rye
+  echo "Install Rye by using the following command: 'curl -sSf https://rye.astral.sh/get | bash'"
+
 fi
